/* No comment provided by engineer. */
"" = "";

/* No comment provided by engineer. */
"-" = "-";

/* No comment provided by engineer. */
"%@ - New Time" = "%@ - New Time";

/* No comment provided by engineer. */
"A client with that name already exists" = "A client with that name already exists";

/* No comment provided by engineer. */
"Add" = "Add";

/* No comment provided by engineer. */
"Add a Client" = "Add a Client";

/* No comment provided by engineer. */
"Add a Project" = "Add a Project";

/* No comment provided by engineer. */
"Add this Task" = "Add this Task";

/* No comment provided by engineer. */
"All hours of the project will also be deleted" = "All hours of the project will also be deleted";

/* No comment provided by engineer. */
"Are you sure you want to delete this ? This can't be undone..." = "Are you sure you want to delete this ? This can't be undone...";

/* No comment provided by engineer. */
"Cancel" = "Cancel";

/* No comment provided by engineer. */
"client" = "client";

/* No comment provided by engineer. */
"Client" = "Client";

/* No comment provided by engineer. */
"clients" = "clients";

/* No comment provided by engineer. */
"Clients" = "Clients";

/* No comment provided by engineer. */
"Close" = "Close";

/* No comment provided by engineer. */
"Continue" = "Continue";

/* No comment provided by engineer. */
"delete" = "delete";

/* No comment provided by engineer. */
"Delete" = "Delete";

/* No comment provided by engineer. */
"Delete a Project" = "Delete a Project";

/* No comment provided by engineer. */
"Delete the client" = "Delete the client";

/* No comment provided by engineer. */
"Delete the client?" = "Delete the client?";

/* No comment provided by engineer. */
"Delete the client(s)?" = "Delete the client(s)?";

/* No comment provided by engineer. */
"Delete the Project?" = "Delete the Project?";

/* No comment provided by engineer. */
"Delete the Task ?" = "Delete the Task ?";

/* No comment provided by engineer. */
"Delete this Project" = "Delete this Project";

/* No comment provided by engineer. */
"Delete this Task" = "Delete this Task";

/* No comment provided by engineer. */
"Deleting the client also deletes all projects belonging to the client" = "Deleting the client also deletes all projects belonging to the client";

/* No comment provided by engineer. */
"Details" = "Details";

/* No comment provided by engineer. */
"Do you really want to delete the project?" = "Do you really want to delete the project?";

/* No comment provided by engineer. */
"Done" = "Done";

/* No comment provided by engineer. */
"Duration:  %@" = "Duration:  %@";

/* No comment provided by engineer. */
"edit" = "edit";

/* No comment provided by engineer. */
"Edit" = "Edit";

/* No comment provided by engineer. */
"Edit client" = "Edit client";

/* No comment provided by engineer. */
"End" = "End";

/* No comment provided by engineer. */
"Error" = "Error";

/* No comment provided by engineer. */
"Home" = "Home";

/* No comment provided by engineer. */
"hours" = "hours";

/* No comment provided by engineer. */
"Invoice:" = "Invoice:";

/* No comment provided by engineer. */
"Label" = "Label";

/* No comment provided by engineer. */
"Name" = "Name";

/* No comment provided by engineer. */
"New Client" = "New Client";

/* No comment provided by engineer. */
"New Project" = "New Project";

/* No comment provided by engineer. */
"New task" = "New task";

/* No comment provided by engineer. */
"New Task" = "New Task";

/* No comment provided by engineer. */
"New Time" = "New Time";

/* No comment provided by engineer. */
"No clients" = "No clients";

/* No comment provided by engineer. */
"No projects found" = "No projects found";

/* No comment provided by engineer. */
"OK" = "OK";

/* No comment provided by engineer. */
"Please select something from the menu (arrow left)" = "Please select something from the menu (arrow left)";

/* No comment provided by engineer. */
"Project Rate" = "Project Rate";

/* No comment provided by engineer. */
"Project Times" = "Project Times";

/* No comment provided by engineer. */
"Project Title" = "Project Title";

/* No comment provided by engineer. */
"Projects" = "Projects";

/* No comment provided by engineer. */
"Rate" = "Rate";

/* No comment provided by engineer. */
"Rate: " = "Rate: ";

/* No comment provided by engineer. */
"Running" = "Running";

/* No comment provided by engineer. */
"Start" = "Start";

/* No comment provided by engineer. */
"Stop now" = "Stop now";

/* No comment provided by engineer. */
"task" = "task";

/* No comment provided by engineer. */
"Task" = "Task";

/* No comment provided by engineer. */
"tasks" = "tasks";

/* No comment provided by engineer. */
"Tasks" = "Tasks";

/* No comment provided by engineer. */
"Time" = "Time";

/* No comment provided by engineer. */
"Titel" = "Titel";

/* No comment provided by engineer. */
"Title" = "Title";

/* No comment provided by engineer. */
"Total: " = "Total: ";

